# reptr

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml  custom.css
docs/src/: SUMMARY.md  ci.md  configuration.md  findings.md  installation.md  introduction.md  quickstart.md  templates.md  thresholds.md
docs/src/commands/: add.md  build.md  library.md  new.md  retest.md  stats.md  watch.md
src/: cli.rs  lib.rs  library.rs  main.rs
src/commands/: add.rs  build.rs  library.rs  mod.rs  new.rs  retest.rs  stats.rs  watch.rs
src/model/: engagement.rs  finding.rs  mod.rs  validation.rs
src/parse/: config.rs  markdown.rs  mod.rs
src/render/: docx.rs  html.rs  json.rs  mod.rs  pdf.rs
templates/: report.html.tera
tests/: integration.rs
tests/fixtures/findings-library/api/: idor.md
tests/fixtures/findings-library/web/: sql-injection.md  xss-stored.md
tests/fixtures/sample-engagement/: client.toml  reptr.toml
tests/fixtures/sample-engagement/findings/: 001-sql-injection-in-login-form.md  002-missing-security-headers.md
